# app/Http/Controllers/Controller.php
@@ -11,7 +11,15 @@ use OpenApi\Annotations as OA;
  * @OA\Info(
  *      version="1.0.0",
  *      title="Documentação API Dg News",
- *      description="API de cadastramento de usuários e Autênticação",
+ *      description="API de cadastramento de usuários e autenticação",
+ * )
+ * 
+ * @OA\SecurityScheme(
+ *      securityScheme="bearerAuth",
+ *      type="http",
+ *      scheme="bearer",
+ *      bearerFormat="JWT",
+ *      description="Insira o token JWT no campo de autorização. Formato: 'Bearer {token}'"
  * )
  */
 class Controller extends BaseController
